--- a/org-setup.org
+++ b/org-setup.org
@@ -270,71 +270,6 @@ I wanted some bling! I added the all-the-icons requirement above, now the next b
 
 #+END_SRC
 
-* Agenda View
-
-The default agenda lacks a little oomph. What I'd like to see is collections such as:
-
-- tasks for today
-- tasks to be refiled
-- tasks for next week
-- tasks that are unscheduled
-- tasks that are waiting/someday
-
-#+BEGIN_SRC emacs-lisp :export yes
-  ;; Custom agenda views
-  (setq org-agenda-custom-commands
-	'(				; start list
-	  (" " "Agenda" ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
-				     (org-agenda-span 'day)
-				     (org-agenda-ndays 1)
-				     (org-agenda-start-on-weekday nil)
-				     (org-agenda-start-day "+0d")
-				     ;; Remove refiling tasks (https://www.reddit.com/r/orgmode/comments/69acg5/orgagendaskipentryif_but_for_categories/)
-				     (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
-								       (outline-next-heading) (1- (point)))
-								      (t (org-agenda-skip-entry-if 'todo 'done))
-								      ))
-				     ;; (org-agenda-skip-entry-if 'todo 'done)
-				     (org-agenda-todo-ignore-deadlines nil)))
-			 ;; Project tickle list.
-			 (todo "PROJECT" ((org-agenda-overriding-header "Project list:")
-					 (org-tags-match-list-sublevels nil)))
-			 ;; Refiling category set file wide in file.
-			 (tags "REFILING" ((org-agenda-overriding-header "Tasks to Refile:")
-					 (org-tags-match-list-sublevels nil)))
-			 ;; Tasks upcoming (should be similar to above?)
-			 (agenda "" ((org-agenda-overriding-header "Upcoming:")
-				     (org-agenda-span 7)
-				     (org-agenda-start-day "+1d")
-				     (org-agenda-start-on-weekday nil)
-				     (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
-								       (outline-next-heading) (1- (point)))
-								      (t (org-agenda-skip-entry-if 'todo 'done))
-								      ))
-				     ;; I should set this next one to true, so that deadlines are ignored...?
-				     (org-agenda-todo-ignore-deadlines nil)))
-			 ;; Tasks that are unscheduled
-			 (todo "TODO" ((org-agenda-overriding-header "Unscheduled Tasks:")
-				       (org-tags-match-list-sublevels nil)
-				       ;; (org-agenda-skip-entry-if 'scheduled 'deadline)
-				       (org-agenda-todo-ignore-scheduled 'all)
-				       ))
-			 ;; Tasks that are waiting or someday
-			 (todo "WAITING|SOMEDAY" ((org-agenda-overriding-header "Waiting/Someday Tasks:")
-					 (org-tags-match-list-sublevels nil)))
-			 )
-	   )
-	  )				; end list
-
-	;; If an item has a (near) deadline, and is scheduled, only show the deadline.
-	org-agenda-skip-scheduled-if-deadline-is-shown t
-	)
-#+END_SRC
-
-The last line only shows one copy of the task---without it, both the scheduled, and the deadline task will show up.
-
-2019-01-14: I've now added a new 'task' view in the custom agenda above. This is to list all projects that I have a hand in, just to keep me on track. I've added a new keyword 'PROJECT' to do this, which can be marked as DONE once the whole project is completed or cancelled.
-
 * Habits
 
 Habits allows some recurring tasks to reappear when marked done. See [[https://blog.aaronbieber.com/2016/09/24/an-agenda-for-life-with-org-mode.html][here]] for some good info. To enable habits, you need to load the =org-habits= module into org, which is achieved with the following:
@@ -347,6 +282,72 @@ Finally close off the =with=eval-after-load= from earlier:
 #+begin_src emacs-lisp :exports none
   )
 #+end_src
+* Agenda View
+
+The default agenda lacks a little oomph. What I'd like to see is collections such as:
+
+- tasks for today
+- tasks to be refiled
+- tasks for next week
+- tasks that are unscheduled
+- tasks that are waiting/someday
+
+#+BEGIN_SRC emacs-lisp :export yes
+  ;; Custom agenda views
+  (with-eval-after-load 'org-agenda
+    (setq org-agenda-custom-commands
+          '(				; start list
+            (" " "Agenda" ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
+                                       (org-agenda-span 'day)
+                                       (org-agenda-ndays 1)
+                                       (org-agenda-start-on-weekday nil)
+                                       (org-agenda-start-day "+0d")
+                                       ;; Remove refiling tasks (https://www.reddit.com/r/orgmode/comments/69acg5/orgagendaskipentryif_but_for_categories/)
+                                       (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
+                                                                         (outline-next-heading) (1- (point)))
+                                                                        (t (org-agenda-skip-entry-if 'todo 'done))
+                                                                        ))
+                                       ;; (org-agenda-skip-entry-if 'todo 'done)
+                                       (org-agenda-todo-ignore-deadlines nil)))
+                           ;; Project tickle list.
+                           (todo "PROJECT" ((org-agenda-overriding-header "Project list:")
+                                            (org-tags-match-list-sublevels nil)))
+                           ;; Refiling category set file wide in file.
+                           (tags "REFILING" ((org-agenda-overriding-header "Tasks to Refile:")
+                                             (org-tags-match-list-sublevels nil)))
+                           ;; Tasks upcoming (should be similar to above?)
+                           (agenda "" ((org-agenda-overriding-header "Upcoming:")
+                                       (org-agenda-span 7)
+                                       (org-agenda-start-day "+1d")
+                                       (org-agenda-start-on-weekday nil)
+                                       (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
+                                                                         (outline-next-heading) (1- (point)))
+                                                                        (t (org-agenda-skip-entry-if 'todo 'done))
+                                                                        ))
+                                       ;; I should set this next one to true, so that deadlines are ignored...?
+                                       (org-agenda-todo-ignore-deadlines nil)))
+                           ;; Tasks that are unscheduled
+                           (todo "TODO" ((org-agenda-overriding-header "Unscheduled Tasks:")
+                                         (org-tags-match-list-sublevels nil)
+                                         ;; (org-agenda-skip-entry-if 'scheduled 'deadline)
+                                         (org-agenda-todo-ignore-scheduled 'all)
+                                         ))
+                           ;; Tasks that are waiting or someday
+                           (todo "WAITING|SOMEDAY" ((org-agenda-overriding-header "Waiting/Someday Tasks:")
+                                                    (org-tags-match-list-sublevels nil)))
+                           )
+             )
+            )				; end list
+
+          ;; If an item has a (near) deadline, and is scheduled, only show the deadline.
+          org-agenda-skip-scheduled-if-deadline-is-shown t
+          )
+    )
+#+END_SRC
+
+The last line only shows one copy of the task---without it, both the scheduled, and the deadline task will show up.
+
+2019-01-14: I've now added a new 'task' view in the custom agenda above. This is to list all projects that I have a hand in, just to keep me on track. I've added a new keyword 'PROJECT' to do this, which can be marked as DONE once the whole project is completed or cancelled.
 
 * Projectile support
 
@@ -355,7 +356,7 @@ Each project can have it's own TODO file, which will make it heaps easier to tra
 #+begin_src emacs-lisp :export yes
   (with-eval-after-load 'org-agenda
     (require 'org-projectile)
-    (mapcar '(lambda (file)
+    (mapcar #'(lambda (file)
                (when (file-exists-p file)
                  (push file org-agenda-files)))
             (org-projectile-todo-files)))
