--- a/org-setup.org
+++ b/org-setup.org
@@ -152,6 +152,8 @@ The following code provides the capture templates when I add TODO tasks. Best pl
       "* SOMEDAY %? :SOMEDAY: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("p" "Project entry" entry (file org-default-notes-file)
       "* PROJECT %? :PROJECT: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
+     ("j" "Journal Club" entry (file org-default-notes-file)
+      "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      )
    ;; Keep a line between headers
    org-cycle-separator-lines 1
@@ -292,57 +294,100 @@ The default agenda lacks a little oomph. What I'd like to see is collections suc
 - tasks that are unscheduled
 - tasks that are waiting/someday
 
-#+BEGIN_SRC emacs-lisp :export yes
-  ;; Custom agenda views
-  (with-eval-after-load 'org-agenda
-    (setq org-agenda-custom-commands
-          '(				; start list
-            (" " "Agenda" ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
-                                       (org-agenda-span 'day)
-                                       (org-agenda-ndays 1)
-                                       (org-agenda-start-on-weekday nil)
-                                       (org-agenda-start-day "+0d")
-                                       ;; Remove refiling tasks (https://www.reddit.com/r/orgmode/comments/69acg5/orgagendaskipentryif_but_for_categories/)
-                                       (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
-                                                                         (outline-next-heading) (1- (point)))
-                                                                        (t (org-agenda-skip-entry-if 'todo 'done))
-                                                                        ))
-                                       ;; (org-agenda-skip-entry-if 'todo 'done)
-                                       (org-agenda-todo-ignore-deadlines nil)))
-                           ;; Project tickle list.
-                           (todo "PROJECT" ((org-agenda-overriding-header "Project list:")
-                                            (org-tags-match-list-sublevels nil)))
-                           ;; Refiling category set file wide in file.
-                           (tags "REFILING" ((org-agenda-overriding-header "Tasks to Refile:")
-                                             (org-tags-match-list-sublevels nil)))
-                           ;; Tasks upcoming (should be similar to above?)
-                           (agenda "" ((org-agenda-overriding-header "Upcoming:")
-                                       (org-agenda-span 7)
-                                       (org-agenda-start-day "+1d")
-                                       (org-agenda-start-on-weekday nil)
-                                       (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
-                                                                         (outline-next-heading) (1- (point)))
-                                                                        (t (org-agenda-skip-entry-if 'todo 'done))
-                                                                        ))
-                                       ;; I should set this next one to true, so that deadlines are ignored...?
-                                       (org-agenda-todo-ignore-deadlines nil)))
-                           ;; Tasks that are unscheduled
-                           (todo "TODO" ((org-agenda-overriding-header "Unscheduled Tasks:")
-                                         (org-tags-match-list-sublevels nil)
-                                         ;; (org-agenda-skip-entry-if 'scheduled 'deadline)
-                                         (org-agenda-todo-ignore-scheduled 'all)
-                                         ))
-                           ;; Tasks that are waiting or someday
-                           (todo "WAITING|SOMEDAY" ((org-agenda-overriding-header "Waiting/Someday Tasks:")
-                                                    (org-tags-match-list-sublevels nil)))
-                           )
-             )
-            )				; end list
+This next bit of setup uses [[https://github.com/alphapapa/org-super-agenda][~org-super-agenda~]] to set up a nicely grouped agenda:
 
-          ;; If an item has a (near) deadline, and is scheduled, only show the deadline.
-          org-agenda-skip-scheduled-if-deadline-is-shown t
-          )
-    )
+#+BEGIN_SRC emacs-lisp :export yes
+  (setq org-agenda-custom-commands
+        '(("a" "Super Agenda"
+           ((agenda "" ((org-agenda-span 'day)
+                        (org-agenda-overriding-header "Today's Items")
+                        (org-super-agenda-groups
+                         '((:name "Today"
+                                  :time-grid t
+                                  :todo "TODAY"
+                                  :scheduled today
+                                  :order 0)
+                           (:habit t)
+                           (:name "Due Today"
+                                  :deadline today
+                                  :order 2)
+                           (:name "Due Soon"
+                                  :deadline future
+                                  :order 8)
+                           (:name "Overdue"
+                                  :deadline past
+                                  :order 7)
+                           ))))
+            (todo "" ((org-agenda-overriding-header "All Other TODOs")
+                      (org-super-agenda-groups
+                       '((:discard (:scheduled nil))
+                         (:auto-category t
+                                         :order 9)
+                         ))))))
+          ("t" "Todo View"
+           (
+            (todo "" ((org-agenda-overriding-header "")
+                      (org-super-agenda-groups
+                       '((:name "Inbox"
+                                :file-path "inbox"
+                                :order 0
+                                )
+                         (:auto-category t
+                                         :order 9)
+                         ))))))
+          ))
+
+  (org-super-agenda-mode);; Custom agenda views
+
+  ;; (with-eval-after-load 'org-agenda
+  ;;   (setq org-agenda-custom-commands
+  ;;         '(				; start list
+  ;;           (" " "Agenda" ((agenda "" ((org-agenda-overriding-header "Today's Schedule:")
+  ;;                                      (org-agenda-span 'day)
+  ;;                                      (org-agenda-ndays 1)
+  ;;                                      (org-agenda-start-on-weekday nil)
+  ;;                                      (org-agenda-start-day "+0d")
+  ;;                                      ;; Remove refiling tasks (https://www.reddit.com/r/orgmode/comments/69acg5/orgagendaskipentryif_but_for_categories/)
+  ;;                                      (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
+  ;;                                                                        (outline-next-heading) (1- (point)))
+  ;;                                                                       (t (org-agenda-skip-entry-if 'todo 'done))
+  ;;                                                                       ))
+  ;;                                      ;; (org-agenda-skip-entry-if 'todo 'done)
+  ;;                                      (org-agenda-todo-ignore-deadlines nil)))
+  ;;                          ;; Project tickle list.
+  ;;                          (todo "PROJECT" ((org-agenda-overriding-header "Project list:")
+  ;;                                           (org-tags-match-list-sublevels nil)))
+  ;;                          ;; Refiling category set file wide in file.
+  ;;                          (tags "REFILING" ((org-agenda-overriding-header "Tasks to Refile:")
+  ;;                                            (org-tags-match-list-sublevels nil)))
+  ;;                          ;; Tasks upcoming (should be similar to above?)
+  ;;                          (agenda "" ((org-agenda-overriding-header "Upcoming:")
+  ;;                                      (org-agenda-span 7)
+  ;;                                      (org-agenda-start-day "+1d")
+  ;;                                      (org-agenda-start-on-weekday nil)
+  ;;                                      (org-agenda-skip-function '(cond ((equal (file-name-nondirectory (buffer-file-name)) "refile.org")
+  ;;                                                                        (outline-next-heading) (1- (point)))
+  ;;                                                                       (t (org-agenda-skip-entry-if 'todo 'done))
+  ;;                                                                       ))
+  ;;                                      ;; I should set this next one to true, so that deadlines are ignored...?
+  ;;                                      (org-agenda-todo-ignore-deadlines nil)))
+  ;;                          ;; Tasks that are unscheduled
+  ;;                          (todo "TODO" ((org-agenda-overriding-header "Unscheduled Tasks:")
+  ;;                                        (org-tags-match-list-sublevels nil)
+  ;;                                        ;; (org-agenda-skip-entry-if 'scheduled 'deadline)
+  ;;                                        (org-agenda-todo-ignore-scheduled 'all)
+  ;;                                        ))
+  ;;                          ;; Tasks that are waiting or someday
+  ;;                          (todo "WAITING|SOMEDAY" ((org-agenda-overriding-header "Waiting/Someday Tasks:")
+  ;;                                                   (org-tags-match-list-sublevels nil)))
+  ;;                          )
+  ;;            )
+  ;;           )				; end list
+
+  ;;         ;; If an item has a (near) deadline, and is scheduled, only show the deadline.
+  ;;         org-agenda-skip-scheduled-if-deadline-is-shown t
+  ;;         )
+  ;;   )
 #+END_SRC
 
 The last line only shows one copy of the task---without it, both the scheduled, and the deadline task will show up.
