--- a/org-setup.org
+++ b/org-setup.org
@@ -85,15 +85,16 @@ I'm migrating/supplementing a BuJo. The following provides my current 'bullets' 
 #+header: :tangle yes
 #+BEGIN_SRC emacs-lisp :export yes
   (setq org-todo-keywords
-	(quote ((sequence "TODO(t)" "|" "DONE(d)")
-		(sequence "PROJECT(p)" "|" "DONE(d)" "CANCELLED(c)")
-		(sequence "WAITING(w)" "|")
-		(sequence "|" "CANCELLED(c)")
-		(sequence "SOMEDAY(s)" "|" "CANCELLED(c)")
-		(sequence "|" "MEETING")
-		)
-	       )
-	)
+  (quote ((sequence "TODO(t)" "|" "DONE(d)")
+          (sequence "TODAY(T)" "|" "DONE(d)")
+          (sequence "PROJECT(p)" "|" "DONE(d)" "CANCELLED(c)")
+          (sequence "WAITING(w)" "|")
+          (sequence "|" "CANCELLED(c)")
+          (sequence "SOMEDAY(s)" "|" "CANCELLED(c)")
+          (sequence "|" "MEETING")
+          )
+         )
+  )
 #+END_SRC
 
 My BuJo is pretty simple, I've mapped it as follows:
@@ -113,7 +114,7 @@ On top of this, I'm going to try and use GS/BH's keyword:
 When we display these in the agenda, we'd also like to have different colours for different keywords:
 
 #+header: :tangle yes
-#+BEGIN_SRC emacs-lisp :export yes
+#+BEGIN_SRC emacs-lisp :export no
   (setq
    ;; Coloured faces for agenda/todo items
    org-todo-keyword-faces
