--- a/org-setup.org
+++ b/org-setup.org
@@ -139,23 +139,23 @@ The following code provides the capture templates when I add TODO tasks. Best pl
    ;; Define the custum capture templates
    org-capture-templates
    '(("t" "todo" entry (file org-default-notes-file)
-      "* TODO %?\n%u\n%a\n" )
+      "* TODO %?\n%u\n%a\n" :clock-in t :clock-resume t)
      ("m" "Meeting/Interruption" entry (file org-default-notes-file)
-      "* MEETING with %? :MEETING:\n%t" )
+      "* MEETING with %? :MEETING:\n%t" :clock-in t :clock-resume t)
      ;; ("d" "Diary" entry (file+datetree "~/org/diary.org")
-     ;;  "* %?\n%U\n" )
+     ;;  "* %?\n%U\n" :clock-in t :clock-resume t)
      ("i" "Idea" entry (file org-default-notes-file)
-      "* %? :IDEA: \n%t\n" )
+      "* %? :IDEA: \n%t\n" :clock-in t :clock-resume t)
      ;; ("n" "Next task" entry (file+headline org-default-notes-file "Tasks")
      ;;  "** NEXT %? \nDEADLINE: %t")
      ("e" "Respond email" entry (file org-default-notes-file)
-      "* TODO Respond to %:from on %:subject :EMAIL: \nSCHEDULED: %t\n%U\n%a\n"  :immediate-finish t)
+      "* TODO Respond to %:from on %:subject :EMAIL: \nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
      ("s" "Someday" entry (file org-default-notes-file)
-      "* SOMEDAY %? :SOMEDAY: \n%u\n"  :empty-lines 1)
+      "* SOMEDAY %? :SOMEDAY: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("p" "Project entry" entry (file org-default-notes-file)
-      "* PROJECT %? :PROJECT: \n%u\n"  :empty-lines 1)
+      "* PROJECT %? :PROJECT: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("j" "Journal Club" entry (file org-journal-file)
-      "* DETAILS: %? :JOURNAL CLUB: \n%u\n"  :empty-lines 1)
+      "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      )
    ;; Keep a line between headers
    org-cycle-separator-lines 1
