--- a/org-setup.org
+++ b/org-setup.org
@@ -304,6 +304,7 @@ This next bit of setup uses [[https://github.com/alphapapa/org-super-agenda][~or
         '(("a" "Super Agenda"
            ((agenda "" ((org-agenda-span 'day)
                         (org-agenda-overriding-header "Today's Items")
+                        (org-agenda-skip-scheduled-if-deadline-is-shown t)
                         (org-super-agenda-groups
                          '((:discard (:todo "DONE"))
                            (:discard (:tag "MEETING"))
