little more detail on times

--- a/org-setup.org
+++ b/org-setup.org
@@ -139,17 +139,17 @@ The following code provides the capture templates when I add TODO tasks. Best pl
    ;; Define the custum capture templates
    org-capture-templates
    '(("t" "todo" entry (file org-default-notes-file)
-      "* TODO %?\n%u\n%a\n" :clock-in t :clock-resume t)
+      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
      ("m" "Meeting/Interruption" entry (file org-default-notes-file)
-      "* MEETING Subject: %?:MEETING:\n%t \n** Attendees: " :clock-in t :clock-resume t)
-     ("r" "Ticklers/Reminders" entry (file+headline (concat org-directory "/general.org") "Ticklers")
-      "* TODO %?\n%u\n%a\n" :clock-in t :clock-resume t)
+      "* MEETING Subject: %? :MEETING:\n%t \n** Attendees: " :clock-in t :clock-resume t)
+     ("r" "Ticklers/Reminders" entry (file+headline (lambda() (concat org-directory "/general.org")) "Ticklers")
+      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
      ;; ("e" "Respond email" entry (file org-default-notes-file)
      ;;  "* TODO Respond to %:from on %:subject :EMAIL: \nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
      ;; ("s" "Someday" entry (file org-default-notes-file)
      ;;  "* SOMEDAY %? :SOMEDAY: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("p" "Project entry" entry (file org-default-notes-file)
-      "* PROJECT %? :PROJECT: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
+      "* PROJECT %? :PROJECT: \nCaptured: %u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("j" "Journal Club" entry (file org-journal-file)
       "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      )
