--- a/org-roam-setup.org
+++ b/org-roam-setup.org
@@ -10,14 +10,7 @@
   I've now migrated over to v2 of [[https://github.com/org-roam/org-roam/tree/v2][Org-roam]]. To do this, I needed to follow a number of steps.
 
   1. Make sure that ~gcc~ is in my path ([[https://org-roam.discourse.group/t/v2-do-we-want-org-roam-project-to-host-an-executable-file/1549/5][follow the thread here]]).
-  2. Edit the org-roam enabling in .spacemacs layer ("~/.emacs.d/layers/+emacs/org/layers.el") to
-  #+begin_src emacs-lisp :tangle no
-    (org-roam :toggle org-enable-roam-support
-              :location (recipe :fetcher github :repo "org-roam/org-roam" :branch "v2")
-              )
-
-  #+end_src
-  3. Add new spacemacs leader keys and capture templates (below).
+  2. Add new spacemacs leader keys and capture templates (below).
 
 * Initial configuration
 
@@ -28,7 +21,6 @@
       :defer t
       :hook (after-init . org-roam-mode)
       :init
-      (setq org-roam-v2-ack t)
       (progn
         (spacemacs/set-leader-keys
           "aorf" 'org-roam-node-find
@@ -68,6 +60,36 @@ Similar to [[file:org-setup.org][my org setup]], we'd like some specific org-roa
          :if-new file+head "literature/${slug}.org" "#+title: ${title} %^{ROAM_REF}p\n"
          :unnarrowed t
          )
+        )
+      )
+   #+end_src
+
+** Template definitions
+   
+   #+header: :tangle no
+   #+begin_src emacs-lisp :export no
+     (setq
+      ;; Define custom org-roam capture templates
+      org-roam-capture-templates
+      '(
+        ("p" "person" plain (function org-roam--capture-get-point)
+         "%?"
+         :file-name "%<%Y%m%d%H%M%S>-${slug}"
+         :head "#+title: ${title}
+     ,#+roam_tags: person\n"
+         :unnarrowed t)
+        ("c" "code" plain (function org-roam--capture-get-point)
+         "%?"
+         :file-name "%<%Y%m%d%H%M%S>-${slug}"
+         :head "#+title: ${title}
+     ,#+roam_tags: code\n"
+         :unnarrowed t)
+        ("P" "process" plain (function org-roam--capture-get-point)
+         "%?"
+         :file-name "%<%Y%m%d%H%M%S>-${slug}"
+         :head "#+title: ${title}
+     ,#+roam_tags: process\n"
+         :unnarrowed t)
         )
       )
    #+end_src
