--- a/org-roam-setup.org
+++ b/org-roam-setup.org
@@ -17,27 +17,19 @@
   (to overwrite the defaults in spacemacs)
 
   #+begin_src emacs-lisp :tangle yes :export yes
-    (use-package org-roam
-      :defer t
-      :hook (after-init . org-roam-mode)
-      :init
-      (progn
-        (spacemacs/set-leader-keys
-          "aorf" 'org-roam-node-find
-          "aorg" 'org-roam-graph
-          "aori" 'org-roam-node-insert
-          "aorl" 'org-roam-buffer-toggle
-          "aorc" 'org-roam-capture)
+    (progn
+      (spacemacs/set-leader-keys
+        "aorf" 'org-roam-node-find
+        "aorg" 'org-roam-graph
+        "aori" 'org-roam-node-insert
+        "aorl" 'org-roam-buffer-toggle
+        "aorc" 'org-roam-capture)
 
-        (spacemacs/set-leader-keys-for-major-mode 'org-mode
-          "rf" 'org-roam-node-find
-          "ri" 'org-roam-node-insert
-          "rl" 'org-roam-buffer-toggle
-          "rc" 'org-roam-capture))
-      :config
-      (org-roam-setup)
-      )
-
+      (spacemacs/set-leader-keys-for-major-mode 'org-mode
+        "rf" 'org-roam-node-find
+        "ri" 'org-roam-node-insert
+        "rl" 'org-roam-buffer-toggle
+        "rc" 'org-roam-capture))
   #+end_src
 
 * Capture templates
@@ -46,18 +38,18 @@ Similar to [[file:org-setup.org][my org setup]], we'd like some specific org-roa
 
 ** Template definitions
    
-   #+header: :tangle no
-   #+begin_src emacs-lisp :export no
+   #+header: :tangle yes
+   #+begin_src emacs-lisp :export yes
      (setq
       ;; Define custom org-roam capture templates
       org-roam-capture-templates
       '(
         ("p" "Permanent Note" plain "%?"
-         :if-new file+head "${slug}.org" "#+title: ${title}\n"
+         :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
          :unnarrowed t
          )
         ("l" "Literature Note" plain "%?"
-         :if-new file+head "literature/${slug}.org" "#+title: ${title} %^{ROAM_REF}p\n"
+         :if-new (file+head "literature/%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
          :unnarrowed t
          )
         )
@@ -93,4 +85,13 @@ Similar to [[file:org-setup.org][my org setup]], we'd like some specific org-roa
         )
       )
    #+end_src
+
+* Starting org-roam
+
+  Org-roam needs to be 'started' with v2. So we call the setup function to get it going:
+
+  #+begin_src emacs-lisp :tangle yes :export yes
+    ;; start org roam
+    (org-roam-setup)
+  #+end_src
 
