--- a/org-setup.org
+++ b/org-setup.org
@@ -154,7 +154,7 @@ The following code provides the capture templates when I add TODO tasks. Best pl
       "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("P" "Professional development templates")
      ("Ps" "Seminar" entry (file+headline (lambda() (concat org-directory "/professional-development.org")) "Seminars")
-      "* Title: %?\n** Date: %^t\n** Speaker: " :clock-in t :clock-resume t)
+      "* Title: %?\n** Date: %^t\n** Speaker: \n** Notes\n" :clock-in t :clock-resume t)
      ("Pw" "Workshop" entry (file+headline (lambda() (concat org-directory "/professional-development.org")) "Workshops")
       "* Title: %?\n** Date: %^t\n** Presenter: " :clock-in t :clock-resume t)
 
